--- a/bt_nodes/configuration/CMakeLists.txt
+++ b/bt_nodes/configuration/CMakeLists.txt
@@ -22,13 +22,8 @@ set(dependencies
 
 include_directories(include)
 
-
 add_library(set_wp_bt_node SHARED src/configuration/SetWp.cpp)
 list(APPEND plugin_libs set_wp_bt_node)
-
-add_executable(set_wp_test src/test/set_wp_test.cpp)
-ament_target_dependencies(set_wp_test ${dependencies})
-target_link_libraries(set_wp_test set_wp_bt_node)
 
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
@@ -37,8 +32,7 @@ endforeach()
 
 install(TARGETS
   ${plugin_libs}
-  set_wp_bt_node
-  set_wp_test
+  EXPORT ${PROJECT_NAME}
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
@@ -46,10 +40,6 @@ install(TARGETS
 
 install(DIRECTORY include/
   DESTINATION include/
-)
-
-install(DIRECTORY bt_xml config
-  DESTINATION share/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
@@ -60,6 +50,6 @@ if(BUILD_TESTING)
 endif()
 
 ament_export_dependencies(${dependencies})
-ament_export_libraries(${plugin_libs})
+ament_export_targets(${PROJECT_NAME} HAS_LIBRARY_TARGET)
 
 ament_package()
