Look at Created and moveto2 alternativa BT created
Signed-off-by: aaggj <albertogarciagomezjacinto@gmail.com>

--- a/bt_nodes/motion/CMakeLists.txt
+++ b/bt_nodes/motion/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(behaviortree_cpp_v3 REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(nav2_msgs REQUIRED)
 find_package(nav2_behavior_tree REQUIRED)
+find_package(gb_attention REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -22,6 +23,7 @@ set(dependencies
   geometry_msgs
   nav2_msgs
   nav2_behavior_tree
+  gb_attention
 )
 
 include_directories(include)
@@ -29,9 +31,16 @@ include_directories(include)
 add_library(move_to_bt_node SHARED src/motion/navigation/MoveTo.cpp)
 list(APPEND plugin_libs move_to_bt_node)
 
+add_library(look_at_bt_node SHARED src/motion/head/LookAt.cpp)
+list(APPEND plugin_libs look_at_bt_node)
+
 add_executable(move_to_test src/test/move_to_test.cpp)
 ament_target_dependencies(move_to_test ${dependencies})
 target_link_libraries(move_to_test move_to_bt_node)
+
+add_executable(look_at_test src/test/look_at_test.cpp)
+ament_target_dependencies(look_at_test ${dependencies})
+target_link_libraries(look_at_test look_at_bt_node)
 
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
@@ -42,6 +51,8 @@ install(TARGETS
   ${plugin_libs}
   move_to_bt_node
   move_to_test
+  look_at_bt_node
+  look_at_test
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
