--- a/bt_nodes/bt_test/CMakeLists.txt
+++ b/bt_nodes/bt_test/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(behaviortree_cpp_v3 REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(configuration REQUIRED)
 find_package(motion REQUIRED)
+find_package(perception REQUIRED)
+find_package(tf2_ros REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -21,6 +23,8 @@ set(dependencies
   behaviortree_cpp_v3
   configuration
   motion
+  perception
+  tf2_ros
 )
 
 # Set WP test
@@ -38,10 +42,28 @@ add_executable(setwp_and_moveto_test src/setwp_and_moveto_test.cpp)
 ament_target_dependencies(setwp_and_moveto_test ${dependencies})
 target_link_libraries(setwp_and_moveto_test configuration::set_wp_bt_node motion::move_to_bt_node)
 
+# Is Detected test
+add_executable(is_detected_test src/is_detected_test.cpp)
+ament_target_dependencies(is_detected_test ${dependencies})
+target_link_libraries(is_detected_test perception::is_detected_bt_node)
+
+# Is Detected Real test
+add_executable(is_detected_real_test src/is_detected_real_test.cpp)
+ament_target_dependencies(is_detected_real_test ${dependencies})
+target_link_libraries(is_detected_real_test perception::is_detected_bt_node)
+
+# Is Detected Move To test
+add_executable(isdetected_moveto_test src/isdetected_moveto_test.cpp)
+ament_target_dependencies(isdetected_moveto_test ${dependencies})
+target_link_libraries(isdetected_moveto_test perception::is_detected_bt_node motion::move_to_bt_node)
+
 install(TARGETS
   set_wp_test
   move_to_test
   setwp_and_moveto_test
+  is_detected_test
+  is_detected_real_test
+  isdetected_moveto_test
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
