--- a/bt_nodes/bt_test/CMakeLists.txt
+++ b/bt_nodes/bt_test/CMakeLists.txt
@@ -10,8 +10,11 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(behaviortree_cpp_v3 REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(audio_common_msgs REQUIRED)
+find_package(whisper_msgs REQUIRED)
 find_package(configuration REQUIRED)
 find_package(motion REQUIRED)
+find_package(hri REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -19,8 +22,11 @@ set(dependencies
   rclcpp
   rclcpp_action
   behaviortree_cpp_v3
+  audio_common_msgs
+  whisper_msgs
   configuration
   motion
+  hri
 )
 
 # Set WP test
@@ -38,10 +44,16 @@ add_executable(setwp_and_moveto_test src/setwp_and_moveto_test.cpp)
 ament_target_dependencies(setwp_and_moveto_test ${dependencies})
 target_link_libraries(setwp_and_moveto_test configuration::set_wp_bt_node motion::move_to_bt_node)
 
+# Speak test
+add_executable(speak_test src/speak_test.cpp)
+ament_target_dependencies(speak_test ${dependencies})
+target_link_libraries(speak_test hri::speak_bt_node hri::dialogConfirmation_bt_node)
+
 install(TARGETS
   set_wp_test
   move_to_test
   setwp_and_moveto_test
+  speak_test
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
