--- a/bt_nodes/motion/package.xml
+++ b/bt_nodes/motion/package.xml
@@ -6,7 +6,7 @@
   <description>TODO: Package description</description>
   <maintainer email="rodrigo.perez@urjc.es">rod</maintainer>
   <maintainer email="juancarlos.serrano@urjc.es">Juanca</maintainer>
-  <maintainer email="alberto.gomezjacinto@urjc.es">Alberto</maintainer>
+  <maintainer email="albertogarciagomezjacinto@gmail.com">Alberto</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
@@ -17,4 +17,5 @@
   <export>
     <build_type>ament_cmake</build_type>
   </export>
+  <depend>attention_system</depend>
 </package>
