--- a/bt_nodes/bt_test/package.xml
+++ b/bt_nodes/bt_test/package.xml
@@ -14,6 +14,7 @@
   <depend>configuration</depend>
   <depend>motion</depend>
   <depend>perception</depend>
+  <depend>hri</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
