Is detected & tests (#6)
* Added isDetected bt node

Signed-off-by: Juancams <jc.manzanares.serrano@gmail.com>

* Added test for is detected

* Changed frame id

Signed-off-by: Juancams <jc.manzanares.serrano@gmail.com>

* Added frame id map

* New bt tests

---------

Signed-off-by: Juancams <jc.manzanares.serrano@gmail.com>

--- a/bt_nodes/bt_test/CMakeLists.txt
+++ b/bt_nodes/bt_test/CMakeLists.txt
@@ -14,6 +14,8 @@ find_package(audio_common_msgs REQUIRED)
 find_package(whisper_msgs REQUIRED)
 find_package(configuration REQUIRED)
 find_package(motion REQUIRED)
+find_package(perception REQUIRED)
+find_package(tf2_ros REQUIRED)
 find_package(hri REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -26,6 +28,8 @@ set(dependencies
   whisper_msgs
   configuration
   motion
+  perception
+  tf2_ros
   hri
 )
 
@@ -44,6 +48,26 @@ add_executable(setwp_and_moveto_test src/setwp_and_moveto_test.cpp)
 ament_target_dependencies(setwp_and_moveto_test ${dependencies})
 target_link_libraries(setwp_and_moveto_test configuration::set_wp_bt_node motion::move_to_bt_node)
 
+# Is Detected test
+add_executable(is_detected_test src/is_detected_test.cpp)
+ament_target_dependencies(is_detected_test ${dependencies})
+target_link_libraries(is_detected_test perception::is_detected_bt_node)
+
+# Is Detected Real test
+add_executable(is_detected_real_test src/is_detected_real_test.cpp)
+ament_target_dependencies(is_detected_real_test ${dependencies})
+target_link_libraries(is_detected_real_test perception::is_detected_bt_node)
+
+# Is Detected Move To test
+add_executable(isdetected_moveto_test src/isdetected_moveto_test.cpp)
+ament_target_dependencies(isdetected_moveto_test ${dependencies})
+target_link_libraries(isdetected_moveto_test perception::is_detected_bt_node motion::move_to_bt_node)
+
+# Is Detected Move To Loop test
+add_executable(is_detected_moveto_loop_test src/is_detected_moveto_loop_test.cpp)
+ament_target_dependencies(is_detected_moveto_loop_test ${dependencies})
+target_link_libraries(is_detected_moveto_loop_test perception::is_detected_bt_node motion::move_to_bt_node)
+
 # Speak test
 add_executable(speak_test src/speak_test.cpp)
 ament_target_dependencies(speak_test ${dependencies})
@@ -53,6 +77,10 @@ install(TARGETS
   set_wp_test
   move_to_test
   setwp_and_moveto_test
+  is_detected_test
+  is_detected_real_test
+  isdetected_moveto_test
+  is_detected_moveto_loop_test
   speak_test
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
