--- a/robocup_bringup/params/tiago_nav_params.yaml
+++ b/robocup_bringup/params/tiago_nav_params.yaml
@@ -194,12 +194,7 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.275
-      plugins: ["voxel_layer", "keepout_filter", "inflation_layer"]
-      # filters: ["keepout_filter"]
-      keepout_filter:
-        plugin: "nav2_costmap_2d::KeepoutFilter"
-        enabled: True
-        filter_info_topic: "/costmap_filter_info"
+      plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
@@ -240,12 +235,7 @@ global_costmap:
       robot_radius: 0.275
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "keepout_filter", "inflation_layer"]
-      # filters: ["keepout_filter"]
-      keepout_filter:
-        plugin: "nav2_costmap_2d::KeepoutFilter"
-        enabled: True
-        filter_info_topic: "/costmap_filter_info"
+      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
