Added follow test and modificed moveto and lookto
Signed-off-by: aaggj <albertogarciagomezjacinto@gmail.com>

--- a/bt_nodes/bt_test/CMakeLists.txt
+++ b/bt_nodes/bt_test/CMakeLists.txt
@@ -38,10 +38,20 @@ add_executable(set_wp_test src/set_wp_test.cpp)
 ament_target_dependencies(set_wp_test ${dependencies})
 target_link_libraries(set_wp_test configuration::set_wp_bt_node)
 
-# Move To test
+# Look At test
+add_executable(look_at_test src/look_at_test.cpp)
+ament_target_dependencies(look_at_test ${dependencies})
+target_link_libraries(look_at_test motion::look_at_bt_node)
+
+# Move To test Real
 add_executable(move_to_test src/move_to_test.cpp)
 ament_target_dependencies(move_to_test ${dependencies})
 target_link_libraries(move_to_test motion::move_to_bt_node)
+
+# Move To test Simulated
+add_executable(move_to_test_sim src/move_to_test_sim.cpp)
+ament_target_dependencies(move_to_test_sim ${dependencies})
+target_link_libraries(move_to_test_sim motion::move_to_bt_node)
 
 # Set WP and MoveTo test
 add_executable(setwp_and_moveto_test src/setwp_and_moveto_test.cpp)
@@ -68,6 +78,11 @@ add_executable(is_detected_moveto_loop_test src/is_detected_moveto_loop_test.cpp
 ament_target_dependencies(is_detected_moveto_loop_test ${dependencies})
 target_link_libraries(is_detected_moveto_loop_test perception::is_detected_bt_node motion::move_to_bt_node)
 
+#Is Detected Move To and Attention - Follow test
+add_executable(follow_test src/follow_test.cpp)
+ament_target_dependencies(follow_test ${dependencies})
+target_link_libraries(follow_test perception::is_detected_bt_node motion::move_to_bt_node motion::look_at_bt_node)
+
 # Speak test
 add_executable(speak_test src/speak_test.cpp)
 ament_target_dependencies(speak_test ${dependencies})
@@ -75,12 +90,15 @@ target_link_libraries(speak_test hri::speak_bt_node hri::dialogConfirmation_bt_n
 
 install(TARGETS
   set_wp_test
+  look_at_test
   move_to_test
+  move_to_test_sim
   setwp_and_moveto_test
   is_detected_test
   is_detected_real_test
   isdetected_moveto_test
   is_detected_moveto_loop_test
+  follow_test
   speak_test
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
