--- a/bt_nodes/arm/package.xml
+++ b/bt_nodes/arm/package.xml
@@ -12,7 +12,9 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
-  <depend>action_server</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_action</depend>
+  <depend>manipulation_interfaces</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
