--- a/bt_nodes/arm/package.xml
+++ b/bt_nodes/arm/package.xml
@@ -12,7 +12,7 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
-  <depend>action_server</depend>
+  <depend>manipulation_action_server</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
