--- a/bt_nodes/bt_test/package.xml
+++ b/bt_nodes/bt_test/package.xml
@@ -12,7 +12,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>configuration</depend>
-  <depend>motion</depend>
+  <!-- <depend>motion</depend> -->
   <depend>perception</depend>
   <depend>hri</depend>
   <depend>arm</depend>
