--- a/bt_nodes/configuration/CMakeLists.txt
+++ b/bt_nodes/configuration/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(behaviortree_cpp_v3 REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -18,12 +19,16 @@ set(dependencies
   rclcpp_action
   behaviortree_cpp_v3
   geometry_msgs
+  tf2_geometry_msgs
 )
 
 include_directories(include)
 
 add_library(set_wp_bt_node SHARED src/configuration/SetWp.cpp)
 list(APPEND plugin_libs set_wp_bt_node)
+
+add_library(init_carry_bt_node SHARED src/configuration/init_carry.cpp)
+list(APPEND plugin_libs init_carry_bt_node)
 
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
