--- a/robocup_bringup/params/carry_params.yaml
+++ b/robocup_bringup/params/carry_params.yaml
@@ -1,7 +1,7 @@
 init_carry_test:
   ros__parameters:
     use_sim_time: False
-    cam_frame: "camera_link"
+    cam_frame: "head_front_camera_link_color_optical_frame"
     home_position: [0.0, 0.0, 0.0]
     home_pose: "home"
     offer_pose: "offer"
