--- a/bt_nodes/motion/package.xml
+++ b/bt_nodes/motion/package.xml
@@ -19,6 +19,7 @@
   <depend>behaviortree_cpp_v3</depend>
   <depend>action_msgs</depend>
   <depend>attention_system</depend>
+  <depend>nav2_behavior_tree</depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
