--- a/bt_nodes/arm/CMakeLists.txt
+++ b/bt_nodes/arm/CMakeLists.txt
@@ -29,6 +29,9 @@ include_directories(include)
 add_library(pick_bt_node SHARED src/manipulation/pick_object.cpp)
 list(APPEND plugin_libs pick_bt_node)
 
+add_library(move_to_predefined_bt_node SHARED src/manipulation/move_to_predefined.cpp)
+list(APPEND plugin_libs move_to_predefined_bt_node)
+
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
   target_compile_definitions(${bt_plugin} PRIVATE BT_PLUGIN_EXPORT)
