--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,6 +17,8 @@ jobs:
         os: [ubuntu-22.04]
       fail-fast: false
     steps:
+      - name: Install vision deps
+        run: sudo apt-get install ros-humble-vision-msgs    
       - name: Setup ROS 2
         uses: ros-tooling/setup-ros@0.7.0
         with:
