follow with publisher

--- a/bt_nodes/bt_test/CMakeLists.txt
+++ b/bt_nodes/bt_test/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(arm REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(hri REQUIRED)
 find_package(perception_system_interfaces REQUIRED)
+find_package(backward_ros REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -40,6 +41,7 @@ set(dependencies
   arm
   geometry_msgs
   perception_system_interfaces
+  backward_ros
 )
 
 # Set WP test
@@ -148,6 +150,21 @@ target_link_libraries(carry_my_luggage_test
   hri::dialogConfirmation_bt_node
 )
 
+# carry my luggage test
+add_executable(follow_entity_test src/follow_entity_test.cpp)
+ament_target_dependencies(follow_entity_test ${dependencies})
+target_link_libraries(follow_entity_test
+  configuration::init_carry_bt_node
+  perception::is_detected_bt_node
+  # perception::is_entity_moving_bt_node
+  # arm::move_to_predefined_bt_node
+  # motion::move_to_bt_node
+  motion::look_at_bt_node
+  motion::follow_entity_bt_node
+  # hri::speak_bt_node
+  # hri::dialogConfirmation_bt_node
+)
+
 install(TARGETS
   set_wp_test
   look_at_test
@@ -167,6 +184,7 @@ install(TARGETS
   follow_person_test
   init_carry
   carry_my_luggage_test
+  follow_entity_test
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
