--- a/bt_nodes/configuration/CMakeLists.txt
+++ b/bt_nodes/configuration/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(rclcpp_action REQUIRED)
 find_package(behaviortree_cpp_v3 REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2 REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -20,6 +22,8 @@ set(dependencies
   behaviortree_cpp_v3
   geometry_msgs
   tf2_geometry_msgs
+  tf2
+  tf2_ros
 )
 
 include_directories(include)
