--- a/robocup_bringup/params/tiago_nav_follow_params.yaml
+++ b/robocup_bringup/params/tiago_nav_follow_params.yaml
@@ -355,16 +355,16 @@ slam_toolbox:
     # - -0.9
     # - 3.6
     # - 1.56
-    map_update_interval: 0.1
+    map_update_interval: 0.01
     max_laser_range: 20.0
     minimum_angle_penalty: 0.9
     minimum_distance_penalty: 0.5
     minimum_time_interval: 0.1
     minimum_travel_distance: 0.01
     minimum_travel_heading: 0.01
-    mode: localization
+    mode: mapping
     odom_frame: odom
-    resolution: 0.05
+    resolution: 0.1
     scan_buffer_maximum_scan_distance: 10.0
     scan_buffer_size: 10
     scan_topic: /scan
