Temporary Filter Entity

--- a/bt_nodes/perception/CMakeLists.txt
+++ b/bt_nodes/perception/CMakeLists.txt
@@ -57,6 +57,9 @@ list(APPEND plugin_libs is_entity_moving_bt_node)
 add_library(is_moving_bt_node SHARED src/perception/is_moving.cpp)
 list(APPEND plugin_libs is_moving_bt_node)
 
+add_library(filter_entity_bt_node SHARED src/perception/filter_entity.cpp)
+list(APPEND plugin_libs filter_entity_bt_node)
+
 add_library(is_pointing_bt_node SHARED src/perception/is_pointing.cpp)
 list(APPEND plugin_libs is_pointing_bt_node)
 
