--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,8 @@ jobs:
         uses: ros-tooling/setup-ros@0.7.0
         with:
           required-ros-distributions: humble
+      - name: Install nlohmann
+        run: sudo apt -y install nlohmann-json3-dev
       - name: build and test
         uses: ros-tooling/action-ros-ci@0.3.3
         with:
