workaround for attention problem

--- a/bt_nodes/bt_test/CMakeLists.txt
+++ b/bt_nodes/bt_test/CMakeLists.txt
@@ -22,7 +22,7 @@ find_package(arm REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(hri REQUIRED)
 find_package(perception_system_interfaces REQUIRED)
-find_package(backward_ros REQUIRED)
+# find_package(backward_ros REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -41,7 +41,7 @@ set(dependencies
   arm
   geometry_msgs
   perception_system_interfaces
-  backward_ros
+  # backward_ros
 )
 
 # Set WP test
