--- a/robocup_bringup/params/tiago_nav_follow_params.yaml
+++ b/robocup_bringup/params/tiago_nav_follow_params.yaml
@@ -199,7 +199,7 @@ global_costmap:
       robot_radius: 0.275
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
+      plugins: ["static_layer", "obstacle_layer"] # , "inflation_layer", "denoise_layer"
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -231,6 +231,9 @@ global_costmap:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
         inflation_radius: 0.55
+      denoise_layer:
+        plugin: "nav2_costmap_2d::DenoiseLayer"
+        enabled: True
       always_send_full_costmap: True
 
 map_server:
@@ -355,16 +358,16 @@ slam_toolbox:
     # - -0.9
     # - 3.6
     # - 1.56
-    map_update_interval: 0.01
+    map_update_interval: 0.1
     max_laser_range: 20.0
     minimum_angle_penalty: 0.9
     minimum_distance_penalty: 0.5
     minimum_time_interval: 0.1
     minimum_travel_distance: 0.01
     minimum_travel_heading: 0.01
-    mode: mapping
+    mode: localization
     odom_frame: odom
-    resolution: 0.1
+    resolution: 0.05
     scan_buffer_maximum_scan_distance: 10.0
     scan_buffer_size: 10
     scan_topic: /scan
