--- a/robocup_bringup/params/tiago_nav_follow_params.yaml
+++ b/robocup_bringup/params/tiago_nav_follow_params.yaml
@@ -199,7 +199,7 @@ global_costmap:
       robot_radius: 0.275
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer"] # , "inflation_layer", "denoise_layer"
+      plugins: ["static_layer", "obstacle_layer", "inflation_layer"] # , "inflation_layer", "denoise_layer"
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -230,7 +230,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.55
+        inflation_radius: 0.35
       denoise_layer:
         plugin: "nav2_costmap_2d::DenoiseLayer"
         enabled: True
