--- a/robocup_bringup/params/tiago_nav_follow_params.yaml
+++ b/robocup_bringup/params/tiago_nav_follow_params.yaml
@@ -54,6 +54,7 @@ bt_navigator:
     - nav2_spin_cancel_bt_node
     - nav2_back_up_cancel_bt_node
     - nav2_drive_on_heading_cancel_bt_node
+    - clear_map_at_goal_bt_node
 
 bt_navigator_navigate_through_poses_rclcpp_node:
   ros__parameters:
