--- a/bt_nodes/motion/package.xml
+++ b/bt_nodes/motion/package.xml
@@ -17,6 +17,7 @@
   <depend>action_msgs</depend>
   <depend>attention_system</depend>
   <depend>nav2_behavior_tree</depend>
+  <depend>nav2_costmap_2d</depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
