--- a/bt_nodes/motion/package.xml
+++ b/bt_nodes/motion/package.xml
@@ -18,6 +18,8 @@
   <depend>attention_system</depend>
   <depend>nav2_behavior_tree</depend>
   <depend>nav2_costmap_2d</depend>
+  <depend>navigation_system_interfaces</depend>
+  
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
