--- a/bt_nodes/hri/package.xml
+++ b/bt_nodes/hri/package.xml
@@ -17,6 +17,7 @@
   <depend>audio_common_msgs</depend>
   <depend>whisper_msgs</depend>
   <depend>llama_msgs</depend>
+  <depend>std_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
