--- a/bt_nodes/arm/package.xml
+++ b/bt_nodes/arm/package.xml
@@ -5,16 +5,16 @@
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="rodrigo.perez@urjc.es">rod</maintainer>
-  <license>TODO: License declaration</license>
-
+  <license>Apache License, Version 2.0</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
-
+  <depend>behaviortree_cpp_v3</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_action</depend>
   <depend>manipulation_interfaces</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
