--- a/bt_nodes/configuration/package.xml
+++ b/bt_nodes/configuration/package.xml
@@ -7,9 +7,14 @@
   <maintainer email="rodrigo.perez@urjc.es">rod</maintainer>
   <maintainer email="juancarlos.serrano@urjc.es">Juanca</maintainer>
   <maintainer email="alberto.gomezjacinto@urjc.es">Alberto</maintainer>
-  <license>TODO: License declaration</license>
-
+  <license>Apache License, Version 2.0</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>rclcpp</depend>
+  <depend>rclcpp_action</depend>
+  <depend>behaviortree_cpp_v3</depend>
+  <depend>geometry_msgs</depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
