--- a/cs4home_simple_project/package.xml
+++ b/cs4home_simple_project/package.xml
@@ -5,8 +5,7 @@
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="fmrico@gmail.com">fmrico</maintainer>
-  <license>TODO: License declaration</license>
-
+  <license>Apache License, Version 2.0</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>cs4home_core</depend>
