--- a/robocup_bringup/package.xml
+++ b/robocup_bringup/package.xml
@@ -5,8 +5,7 @@
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="juancarlos.serrano@urjc.es">Juanca</maintainer>
-  <license>TODO: License declaration</license>
-
+  <license>Apache License, Version 2.0</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
