--- a/bt_nodes/motion/package.xml
+++ b/bt_nodes/motion/package.xml
@@ -23,5 +23,10 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <export>
+    <costmap_2d plugin="${prefix}/clear_people_layer.xml" />
+	  <build_type>ament_cmake</build_type>
+  </export>
+
   
 </package>
