--- a/robocup_bringup/params/tiago_nav_follow_params.yaml
+++ b/robocup_bringup/params/tiago_nav_follow_params.yaml
@@ -200,7 +200,7 @@ global_costmap:
       robot_radius: 0.275
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer"] # , "inflation_layer", "denoise_layer"
+      plugins: ["static_layer", "obstacle_layer", "inflation_layer", "clear_people_layer"] # , "inflation_layer", "denoise_layer"
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -235,6 +235,8 @@ global_costmap:
       denoise_layer:
         plugin: "nav2_costmap_2d::DenoiseLayer"
         enabled: True
+      clear_people_layer:
+        plugin: "nav2_costmap_2d::ClearPeopleLayer"
       always_send_full_costmap: True
 
 map_server:
