Added launchers to receptionist test
Signed-off-by: Juancams <jc.manzanares.serrano@gmail.com>

--- a/bt_nodes/bt_test/CMakeLists.txt
+++ b/bt_nodes/bt_test/CMakeLists.txt
@@ -148,6 +148,26 @@ target_link_libraries(carry_my_luggage_test
   hri::dialogConfirmation_bt_node
 )
 
+add_executable(receptionist_test src/receptionist_test.cpp)
+ament_target_dependencies(receptionist_test ${dependencies})
+target_link_libraries(receptionist_test
+  configuration::set_wp_bt_node
+  # configuration::init_receptionist_bt_node
+  motion::move_to_bt_node
+  hri::speak_bt_node
+  perception::is_detected_bt_node
+  # perception::store_detection_bt_node
+  motion::look_at_bt_node
+  hri::listen_bt_node
+  hri::query_bt_node
+  hri::dialogConfirmation_bt_node
+  # motion::look_around_bt_node
+  # perception::is_sitiable_bt_node
+  # arm::point_at_bt_node
+  arm::move_to_predefined_bt_node
+  # configuration::add_guest_to_count_bt_node
+)
+
 install(TARGETS
   set_wp_test
   look_at_test
@@ -167,6 +187,7 @@ install(TARGETS
   follow_person_test
   init_carry
   carry_my_luggage_test
+  receptionist_test
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
