--- a/bt_nodes/motion/CMakeLists.txt
+++ b/bt_nodes/motion/CMakeLists.txt
@@ -34,6 +34,9 @@ list(APPEND plugin_libs move_to_bt_node)
 add_library(look_at_bt_node SHARED src/motion/head/LookAt.cpp)
 list(APPEND plugin_libs look_at_bt_node)
 
+add_library(pan_bt_node SHARED src/motion/head/Pan.cpp)
+list(APPEND plugin_libs pan_bt_node)
+
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
   target_compile_definitions(${bt_plugin} PRIVATE BT_PLUGIN_EXPORT)
